@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-05-21T08:14:47Z",
+  "timestamp" : "2022-05-21T16:15:15Z",
   "count_outdated" : 270,
   "uniques_outdated" : 136,
-  "count" : 328,
-  "uniques" : 175,
+  "count" : 320,
+  "uniques" : 170,
   "clones" : [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 11,
+      "count": 3,
       "count_minmax": [ 1, 11 ],
-      "uniques": 8,
+      "uniques": 3,
       "uniques_minmax": [ 1, 8 ]
     },
     {
