@@ -1,11 +1,11 @@
 {
-  "count": 58,
-  "uniques": 20,
+  "count": 50,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 11,
-      "uniques": 8
+      "count": 3,
+      "uniques": 3
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
