@@ -1,3 +1,10 @@
+2022-05-21T16:15:15Z:
+* notice: last 14d: unq all: 16 50
+* notice: prev accum: outdated-unq outdated-all / unq all: 136 270 / 175 328
+* notice: next accum: outdated-unq outdated-all / unq all: 136 270 / 170 320
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -5 -8 / +0 +0 -5 -8 / 3 3
+* notice: changed dates: [2022-05-07]
+
 2022-05-21T08:14:47Z:
 * notice: last 14d: unq all: 20 58
 * notice: prev accum: outdated-unq outdated-all / unq all: 136 270 / 173 326
